# CHIP8emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  todo.txt
src/: core.cpp  core.cpp.autosave  core.h  core.h.autosave  debugutils.cpp  debugutils.h  draw.cpp  draw.h  fontset.h  hardware.cpp  hardware.h  interpreter.cpp  interpreter.h  keyboard.cpp  keyboard.h  random.cpp  random.h  sound.cpp  sound.h  tests.cpp  tests.h
